# garage-controller

./: CMakeLists.txt  LICENSE  README.md  agents.md
components/devices/dht22/: CMakeLists.txt  dht22.c  dht22.h
components/devices/light/: CMakeLists.txt  light_control.h  light_driver.c  light_manager.c
components/light/: CMakeLists.txt
components/sensor_manager/: CMakeLists.txt  sensor_interface.c  sensor_interface.h  sensor_manager.c  sensor_manager.h
components/zcl_utility/: CMakeLists.txt
components/zcl_utility/include/: zcl_utility.h
components/zcl_utility/src/: zcl_utility.c
components/zigbee/: CMakeLists.txt  esp_zb_light.c  esp_zb_light.h  zigbee_manager.c  zigbee_manager.h
config/: sdkconfig.defaults
docs/: README.md
docs/setup/: installation.md
docs/user/: manual.md
main/: CMakeLists.txt  idf_component.yml  main.c  rangeSensor.c
src/control/door/: CMakeLists.txt  door_control.c  door_control.h
src/control/safety/: CMakeLists.txt  safety_monitor.c  safety_monitor.h
src/sensors/interface/: CMakeLists.txt  sensor_interface.c
